# VOVAN-CLI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: sample.txt
docs/: NEXT_CODEX_TASK.md  VOVAN_CLI_RUNTIME_BOUNDARY_RU.md  VOVAN_SAFETY_LAYER_RU.md  VOVAN_SITE_BRIDGE_BOUNDARY_RU.md  architecture.md  runbook.md
docs/codex/: vovan_local_pdf_worker_pipeline.md
docs/smoke/: tesseract_image_smoke.md  tesseract_rus_eng_smoke.md
docs/vovan/: connect_vovan_cli_to_real_vladcher_worker_api.md  create_vovan_ocr_cli_mvp_skeleton.md  fix_setuptools_package_discovery.md  harden_vovan_cli_mvp_pr2_before_merge.md
tests/: test_analysis.py  test_api_client.py  test_cli_doctor.py  test_cli_ocr.py  test_cli_ocr_analysis.py  test_cli_worker.py  test_config.py  test_local_ocr_cli.py  test_ocr_placeholder.py  test_preflight.py  test_worker.py  test_worker_flow.py
vovan/: __init__.py  analysis.py  api_client.py  cli.py  config.py  local_ocr.py  ocr.py  preflight.py  report.py  worker.py
