[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vovan"
version = "0.1.0"
description = "VOVAN portable local compute executor CLI with OCR as the first module"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.scripts]
vovan = "vovan.cli:main"
vovan-ocr-file = "vovan.local_ocr:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
[tool.setuptools.packages.find]
include = ["vovan*"]
exclude = ["data*", "logs*", "reports*", "tests*", "docs*"]
